feat(payload-tester): enhance payload loading with query parameter support
- allows to handle payloads with path

--- a/app/views/payload/edit.html
+++ b/app/views/payload/edit.html
@@ -42,7 +42,7 @@
 
                 <div class="col-lg-6">
                     <div class="panel panel-filled">
-                        <div class="panel-heading">Payloads <a href="//{%data domain}/assets/payload-tester.html" target=_blank style="float:right">↗ tester</a></div>
+                        <div class="panel-heading">Payloads <a href="/assets/payload-tester.html?payload={%data domain}" target=_blank style="float:right">↗ tester</a></div>
                         <div class="panel-body payload-panel">
                             <div class="form-group">
                                 <label class="control-label">SCRIPT src</label><label class="shortboost"
